{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 38,
  "lineage": "9b124ee9-9e76-aed6-7575-bf1c2f45c6d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:601666144736:loadbalancer/nginx-elb",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b",
              "eu-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-1830728402.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-030bb25e65c96d561",
              "i-044012c2179eb9f21",
              "i-0880b00688564fbd3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-0d0c22dfd9c4bb8b2"
            ],
            "source_security_group": "601666144736/nginx_elb_sg",
            "source_security_group_id": "sg-0d0c22dfd9c4bb8b2",
            "subnets": [
              "subnet-0ab92e6b08b5ae3db",
              "subnet-0d8cd188b29ad60bc",
              "subnet-0f35b2e7d4099b148"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_instance.nginx3",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050b8344d77081f4b",
            "arn": "arn:aws:ec2:eu-west-2:601666144736:instance/i-0880b00688564fbd3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0880b00688564fbd3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "And_Digital",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c16d048f2e00481f",
            "private_dns": "ip-10-1-0-84.eu-west-2.compute.internal",
            "private_ip": "10.1.0.84",
            "public_dns": "ec2-35-177-216-64.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.216.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04d5169273a4a8f08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab92e6b08b5ae3db",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ec239eabf2a8c1e"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050b8344d77081f4b",
            "arn": "arn:aws:ec2:eu-west-2:601666144736:instance/i-030bb25e65c96d561",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030bb25e65c96d561",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "And_Digital",
            "monitoring": false,
            "primary_network_interface_id": "eni-0827a228fc977ea5f",
            "private_dns": "ip-10-1-1-167.eu-west-2.compute.internal",
            "private_ip": "10.1.1.167",
            "public_dns": "ec2-3-8-135-215.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.135.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00a43831a0d034a0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8cd188b29ad60bc",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ec239eabf2a8c1e"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050b8344d77081f4b",
            "arn": "arn:aws:ec2:eu-west-2:601666144736:instance/i-044012c2179eb9f21",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044012c2179eb9f21",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "And_Digital",
            "monitoring": false,
            "primary_network_interface_id": "eni-06da185a9c592cdde",
            "private_dns": "ip-10-1-2-170.eu-west-2.compute.internal",
            "private_ip": "10.1.2.170",
            "public_dns": "ec2-18-130-109-158.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.109.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04e32942089f534f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f35b2e7d4099b148",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04ec239eabf2a8c1e"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dd9a5c624458b812",
            "owner_id": "601666144736",
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dc3947b85975627f",
            "owner_id": "601666144736",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd9a5c624458b812",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a54454adc634d5",
            "route_table_id": "rtb-0dc3947b85975627f",
            "subnet_id": "subnet-0ab92e6b08b5ae3db"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848008f47f125451",
            "route_table_id": "rtb-0dc3947b85975627f",
            "subnet_id": "subnet-0d8cd188b29ad60bc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b418bcb8093b36d6",
            "route_table_id": "rtb-0dc3947b85975627f",
            "subnet_id": "subnet-0f35b2e7d4099b148"
          },
          "dependencies": [
            "aws_route_table.rtb",
            "aws_subnet.subnet3",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:security-group/sg-0d0c22dfd9c4bb8b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0c22dfd9c4bb8b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": null,
            "owner_id": "601666144736",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:security-group/sg-04ec239eabf2a8c1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ec239eabf2a8c1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": null,
            "owner_id": "601666144736",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:subnet/subnet-0ab92e6b08b5ae3db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0ab92e6b08b5ae3db",
            "map_public_ip_on_launch": true,
            "owner_id": "601666144736",
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:subnet/subnet-0d8cd188b29ad60bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0d8cd188b29ad60bc",
            "map_public_ip_on_launch": true,
            "owner_id": "601666144736",
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:subnet/subnet-0f35b2e7d4099b148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0f35b2e7d4099b148",
            "map_public_ip_on_launch": true,
            "owner_id": "601666144736",
            "vpc_id": "vpc-0e363ce6f9ce9e11d"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:601666144736:vpc/vpc-0e363ce6f9ce9e11d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b8787e434a4832af",
            "default_route_table_id": "rtb-0ba3d33ac1d5bfa54",
            "default_security_group_id": "sg-053f9a8cc2a956f13",
            "dhcp_options_id": "dopt-517f2f39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e363ce6f9ce9e11d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba3d33ac1d5bfa54",
            "owner_id": "601666144736"
          }
        }
      ]
    }
  ]
}